--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
-  "name": "OpenVPN Client",
-  "version": "0.0.1",
+  "name": "OpenVPN Client for Leos",
+  "version": "0.0.3",
   "slug": "openvpn_client",
-  "description": "OpenVPN Client",
-  "url": "https://github.com/Ailme/homeassistant-openvpn-client-addon",
+  "description": "OpenVPN Client ohnuty",
+  "url": "https://github.com/Cooper-Dale/homeassistant-openvpn-client-addon",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "application",
+  "init": false,
   "boot": "auto",
   "host_network": true,
   "privileged": ["NET_ADMIN"],
